section header spacing fixed, hidden when phone

--- a/landingpage/src/Components/CreatorProjectGridDisplay/CreatorProjectGridDisplay.scss
+++ b/landingpage/src/Components/CreatorProjectGridDisplay/CreatorProjectGridDisplay.scss
@@ -75,7 +75,7 @@ $projectTagHeaderHeight: 7vmin;
 
                 // height: 50%;
                 @include for-size(phone-only) {
-                    width: 5vh;
+                    width: 4vh;
                 }
 
                 @include for-size(tablet-portrait-up) {
@@ -103,7 +103,7 @@ $projectTagHeaderHeight: 7vmin;
                 margin-bottom: 0;
 
                 @include for-size(phone-only) {
-                    font-size: 80%;
+                    font-size: 90%;
                 }
 
                 @include for-size(tablet-portrait-up) {
@@ -181,14 +181,14 @@ $projectTagHeaderHeight: 7vmin;
                 bottom: 2vmin;
                 left: 2vmin;
                 padding: .5vmin 2vmin;
-                // background-color: rgba(240, 121, 10, 0.95);
+                background-color: rgba(255,168,0, .95);
                 border-radius: .5vmin;
-                background-image: linear-gradient(120deg,
-                    rgba(255, 255, 255, 0) 0%,
-                    rgba(255, 255, 255, 0) 68.9%,
-                    $orange 69%,
-                    $orange 100%),
-                    linear-gradient(rgba(25, 118, 210, 0.8), rgba(25, 118, 210, 0.8));
+                // background-image: linear-gradient(120deg,
+                //     rgba(255, 255, 255, 0) 0%,
+                //     rgba(255, 255, 255, 0) 68.9%,
+                //     $orange 69%,
+                //     $orange 100%),
+                //     linear-gradient(rgba(25, 118, 210, 0.8), rgba(25, 118, 210, 0.8));
 
                 .tagText {
                     color: white;
@@ -198,19 +198,19 @@ $projectTagHeaderHeight: 7vmin;
                     }
 
                     @include for-size(tablet-portrait-up) {
-                        font-size: 110%;
+                        font-size: 120%;
                     }
 
                     @include for-size(tablet-landscape-up) {
-                        font-size: 110%;
+                        font-size: 100%;
                     }
 
                     @include for-size(desktop-up) {
-                        font-size: 100%;
+                        font-size: 80%;
                     }
 
                     @include for-size(big-desktop-up) {
-                        font-size: 100%;
+                        font-size: 120%;
                     }
                 }
             }
