--- a/landingpage/src/Components/PartnersCard/PartnersCard.scss
+++ b/landingpage/src/Components/PartnersCard/PartnersCard.scss
@@ -12,7 +12,7 @@
   #floatingCard {
     box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.75);
     width: 80vw;
-    padding: 10% 5%;
+    padding: 8% 5%;
 
     // padding: 30%;
 
